--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ colorlog==6.9.0
 homeassistant==2025.3.0
 pip>=21.3.1
 ruff==0.12.8
-cloudflarepycli@git+https://github.com/martinbrose/cloudflarepycli@c13517b9d9031c4ec1552a76c848e36ba2dd094f
+cloudflarepycli@git+https://github.com/DigitallyRefined/cloudflarepycli.git@v2.1.0
